little edit and restructuring in the code base

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* 
+     A simple todo task using html css and JavaScript
+    The README.MD file contains all details about the project
+
+ */
+
 *{
     margin: 0;
     padding: 0;
